bug fixes, display overflow

--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ button:active {
     font-family: 'silkscreen', sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 50q;
+    font-size: 45q;
 }
 
 .clear {
